use blas when available

--- a/meson.build
+++ b/meson.build
@@ -6,18 +6,70 @@ project('spanns', 'cpp',
 )
 
 cxx = meson.get_compiler('cpp')
+host_system = host_machine.system()
+host_cpu = host_machine.cpu_family()
 
 gcc_syntax = cxx.get_argument_syntax() == 'gcc'
-
 add_project_arguments(gcc_syntax ? ['-O3'] : '/GS-', language: 'cpp')
 
 eigen_dep = dependency('eigen3')
-opencv_dep = dependency('opencv4', modules: ['core', 'imgproc'])
-gsl_dep = dependency('gsl')
+opencv_dep = dependency('opencv4', modules: ['core', 'imgproc'], required: false)
+gsl_dep = dependency('gsl', required: false)
 
+# Initialize BLAS/LAPACK dependencies and compile args
+blas_lapack_dep = []
+compile_args = []
+link_args = []
+
+# BLAS/LAPACK handling
+if host_system == 'darwin'
+  # macOS: Use Accelerate framework
+  link_args += ['-framework', 'Accelerate']
+  compile_args += ['-DEIGEN_USE_BLAS', '-DEIGEN_USE_LAPACKE']
+else
+  # Linux/other: Try different BLAS/LAPACK implementations for x86 and ARM
+  if host_cpu == 'x86' or host_cpu == 'x86_64' or host_cpu.startswith('arm')
+    # Try MKL first
+    mkl_deps = [
+      dependency('mkl-static-lp64-iomp', required: false),
+      dependency('mkl-dynamic-lp64-iomp', required: false),
+      dependency('mkl', required: false)
+    ]
+    
+    # Try OpenBLAS
+    openblas_dep = dependency('openblas', required: false)
+    
+    # Generic BLAS/LAPACK
+    blas_dep = dependency('blas', required: false)
+    lapacke_dep = dependency('lapacke', required: false)
+    
+    # Priority: MKL > OpenBLAS > Generic BLAS/LAPACK
+    if mkl_deps[0].found() or mkl_deps[1].found() or mkl_deps[2].found()
+      foreach mkl : mkl_deps
+        if mkl.found()
+          blas_lapack_dep = [mkl]
+          compile_args += ['-DEIGEN_USE_BLAS', '-DEIGEN_USE_LAPACKE', '-DMKL_LP64']
+          break
+        endif
+      endforeach
+    elif openblas_dep.found()
+      blas_lapack_dep = [openblas_dep]
+      compile_args += ['-DEIGEN_USE_BLAS', '-DEIGEN_USE_LAPACKE']
+    elif blas_dep.found() and lapacke_dep.found()
+      blas_lapack_dep = [blas_dep, lapacke_dep]
+      compile_args += ['-DEIGEN_USE_BLAS', '-DEIGEN_USE_LAPACKE']
+    endif
+  endif
+endif
+
+if compile_args.length() > 0
+  add_project_arguments(compile_args, language: 'cpp')
+endif
+
+# VapourSynth handling
 if gcc_syntax
-  vapoursynth_dep = dependency('vapoursynth', version: '>=55').partial_dependency(compile_args: true, includes: true)
-  install_dir = vapoursynth_dep.get_variable(pkgconfig: 'libdir') / 'vapoursynth'
+  vapoursynth_dep = dependency('vapoursynth', version: '>=55', required: false).partial_dependency(compile_args: true, includes: true)
+  install_dir = vapoursynth_dep.get_variable(pkgconfig: 'libdir', default_value: '') / 'vapoursynth'
 else
   vapoursynth_dep = dependency('', required: false)
   install_dir = get_option('libdir') / 'vapoursynth'
@@ -28,7 +80,8 @@ sources = [
 ]
 
 shared_module('spanns', sources,
-  dependencies: [vapoursynth_dep, eigen_dep, opencv_dep, gsl_dep],
+  dependencies: [vapoursynth_dep, eigen_dep, opencv_dep, gsl_dep] + blas_lapack_dep,
+  link_args: link_args,
   install: true,
   install_dir: install_dir,
   gnu_symbol_visibility: 'hidden'
